Fix spacing around the header.

--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,9 @@ body {
 h1 {
   font-size: 3em;
   color: rgba(0, 0, 0, .75);
-  line-height: .5;
+  line-height: 1;
+  margin-top: 20px;
+  margin-bottom: -10px;
   font-weight: 100;
   text-align: center;
 }
